--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: Times, Helvetica, Arial, sans-serif;
+  font-family: Times, Georgia, Arial, sans-serif;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
