--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,5 @@ body {
   text-rendering: optimizeLegibility;
   margin: 0;
   background-image: url("./images/bg777.png");
+  background-color: #EEEBCD;
 }
