--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -1,36 +1,27 @@
 .content__table{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 40px 0;
+  margin: 40px 0 0 0;
+  padding: 0 0 0 15px;
+  width: 100%;
+  max-width: 100%;
 }
 .content__table-header{
-  display: flex;
-  gap: 5px;
   font: bold 17px/21px Times;
   margin: 4px 0;
 }
 .content__table-name{
-  max-width: 150px;
-  margin: 0;
-}
-.content__table-name:nth-of-type(1){
-  min-width: 190px;
+  text-align: left;
 }
 .content__table-name:nth-of-type(2){
-  min-width: 167px;
+  text-align: left;
 }
 .content__table-name:nth-of-type(3){
-  min-width: 72px;
-  display: flex;
-  justify-content: flex-start;
+  text-align: right;
 }
 .content__table-name:nth-of-type(4){
-  min-width: 106px;
+  text-align: right;
 }
 .content__dash-long{
   margin: 40px 0 0 0;
-  width: 545px;
 }
 .content__dash-image{
   object-fit: cover;
@@ -48,3 +39,30 @@
   color: #493C2F;
   align-self: flex-start;
 }
+
+@media screen and (max-width: 980px) {
+  .content__table-header {
+    font: bold 15px/19px Times;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .content__table-header {
+    font: bold 11px/16px Times;
+  }
+  .content__table {
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .content__table-header {
+    font: bold 9px/13px Times;
+  }
+
+  .content__table{
+    margin: 20px 0 0 0;
+    padding: 0;
+  }
+}
+
