--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -3,31 +3,44 @@
   padding: 0 0 0 15px;
   width: 100%;
   max-width: 100%;
+  display: flex;
+  flex-direction: column;
 }
+
 .content__table-header{
   font: bold 17px/21px Times;
   margin: 4px 0;
 }
+
 .content__table-name{
   text-align: left;
+  position: relative;
+  width: 10%;
 }
+
 .content__table-name:nth-of-type(2){
-  text-align: left;
+  width: 3%;
 }
+
 .content__table-name:nth-of-type(3){
   text-align: right;
 }
+
 .content__table-name:nth-of-type(4){
   text-align: right;
+  width: 7%;
 }
+
 .content__dash-long{
   margin: 40px 0 0 0;
 }
+
 .content__dash-image{
   object-fit: cover;
   max-width: 100%;
   box-sizing: border-box; 
 }
+
 .content__table-letter{
   font: bold 32px Times;
   display: block;
@@ -44,20 +57,40 @@
   .content__table-header {
     font: bold 15px/19px Times;
   }
+
+  .content__table {
+    padding:0;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .content__table-header {
+    font: bold 12px/15px Times;
+  }
 }
 
 @media screen and (max-width: 580px) {
   .content__table-header {
-    font: bold 11px/16px Times;
+    font: bold 8px/12px Times;
+    width: 210px;
   }
   .content__table {
     padding: 0;
+    margin: 20px 0 0 0;
+  }
+
+  .content__table-name {
+    width: 1%;
+  }
+  .content__table-name:nth-of-type(4) {
+    width: 2%;
   }
 }
 
 @media screen and (max-width: 420px) {
   .content__table-header {
-    font: bold 9px/13px Times;
+    font: bold 9px/11px Times;
+    width: 175px;
   }
 
   .content__table{
