--- a/src/components/TableCatalog/TableCatalog.css
+++ b/src/components/TableCatalog/TableCatalog.css
@@ -1,27 +1,26 @@
 .content__table-catalog{
   display: flex;
+  justify-content: space-between;
   align-items: baseline;
   font: normal 17px/21px Times;
-  margin: 3px 0;
+  margin: 3px 0;    
+  width: 100%;
+  max-width: 100%;
 }
+
 .content__table-link{
-  width: 172px;
   text-decoration: none;
   color: #493C2F;
   font-weight: bold;
 }
+
 .content__table-number{
   vertical-align: super;
   font: normal 12px Arial;
   color: #aaa;
   padding-left: 2px; 
 }
-.content__table-city{
-  width: 133px;
-  display: flex;
-  align-items: center;
-  white-space: nowrap;
-}
+
 .content__table-flag{
   padding: 1px 1px 1px 1px;
   margin-right: 3px;
@@ -29,13 +28,104 @@
   width: 16px;
   height: 10px;
 }
-.content__table-form{
-  width: 137px;
-  display: flex;
-  justify-content: flex-end;
+
+.content__table-cell{
+  text-align: left;
+  position: relative;
+  width: 70%;
+  white-space: nowrap;
 }
-.content__table-years{
-  width: 105px;
-  display: flex;
-  justify-content: flex-end;
+
+.content__table-cell:nth-of-type(1){
+  text-decoration: none;
+  width: 14%;
+}
+
+.content__table-cell:nth-of-type(2){
+  width: 5%;
+}
+
+.content__table-cell:nth-of-type(3){
+  width: 1%;
+  margin-left: 60px;
+}
+
+.content__table-cell:nth-of-type(4){
+  text-align: right;
+  width: 15%;
+}
+
+@media screen and (max-width: 980px) {
+  .content__table-catalog {
+    font: normal 15px/19px Times;
+  }
+
+  .content__table-cell:nth-of-type(3){
+    width: 1%;
+    margin-left: 40px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+  .content__table-catalog {
+    font: normal 11px/15px Times;
+  }
+
+  .content__table-cell:nth-of-type(3){
+    width: 1%;
+    margin-left: 30px;
+  }
+
+  .content__table-number{
+    font: normal 8px Arial;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .content__table-catalog {
+    font: normal 9px/13px Times;
+  }
+
+  .content__table-cell:nth-of-type(1){
+    width: 1%;
+  }
+  .content__table-cell:nth-of-type(2){
+    width: 10%;
+  }
+
+  .content__table-cell:nth-of-type(3){
+    width: 1%;
+    margin-left: 20px;
+  }
+
+  .content__table-cell:nth-of-type(4){
+    width: 13%;
+  }
+  .content__table-flag {
+    width: 10px;
+    height: 6px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .content__table-catalog {
+    width: 95%;
+    font: normal 8px/10px Times
+  }
+
+  .content__table-cell:nth-of-type(2) {
+    width: 1%;
+  }
+
+  .content__table-cell:nth-of-type(3) {
+    margin-left: 10px;
+  }
+
+  .content__table-number {
+    font: normal 6px Arial;
+  }
+
+  .content__table-cell_wrap{
+    white-space: wrap;
+  }
 }
