--- a/src/components/TableCatalog/TableCatalog.css
+++ b/src/components/TableCatalog/TableCatalog.css
@@ -22,11 +22,19 @@
 }
 
 .content__table-flag{
-  padding: 1px 1px 1px 1px;
-  margin-right: 3px;
   opacity: 0.7;
   width: 16px;
   height: 10px;
+}
+
+.content__table-border{
+  border: solid 1px #A38F8B;
+  width: 16px;
+  height: 10px;
+  display: flex;
+  margin-right: 3px;
+  padding: 1px 1px 1px 1px;
+  max-width: 100%;
 }
 
 .content__table-cell{
@@ -34,6 +42,8 @@
   position: relative;
   width: 70%;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
 }
 
 .content__table-cell:nth-of-type(1){
@@ -53,6 +63,7 @@
 .content__table-cell:nth-of-type(4){
   text-align: right;
   width: 15%;
+  justify-content: flex-end;
 }
 
 @media screen and (max-width: 980px) {
@@ -87,7 +98,7 @@
   }
 
   .content__table-cell:nth-of-type(1){
-    width: 1%;
+    width: 7%;
   }
   .content__table-cell:nth-of-type(2){
     width: 10%;
@@ -95,30 +106,39 @@
 
   .content__table-cell:nth-of-type(3){
     width: 1%;
-    margin-left: 20px;
   }
 
   .content__table-cell:nth-of-type(4){
-    width: 13%;
+    width: 20%;
   }
   .content__table-flag {
-    width: 10px;
-    height: 6px;
+    width: 8px;
+    height: 4px;
   }
+
+  .content__table-border{
+    width: 8px;
+    height: 4px;
+    margin-right: 1px;
+  }
+
+  .content__table-number {
+    font: normal 5px Arial;
+}
 }
 
 @media screen and (max-width: 420px) {
   .content__table-catalog {
-    width: 95%;
+    width: 100%;
     font: normal 8px/10px Times
   }
 
   .content__table-cell:nth-of-type(2) {
-    width: 1%;
+    width: 10%;
   }
 
   .content__table-cell:nth-of-type(3) {
-    margin-left: 10px;
+    margin-left: 5px;
   }
 
   .content__table-number {
