--- a/src/components/ColumnSearch/ColumnSearch.css
+++ b/src/components/ColumnSearch/ColumnSearch.css
@@ -21,12 +21,16 @@
 }
 
 .content__input{
-  font: bold 17px Times;
   background-color: white;
   color: #493C2F;
   border: 4px solid #D6D0AB;
-  width: 90%;
-  padding-left: 4px;
+  width: 93%;
+  height: 20px;
+  padding: 1px 0 0 4px;
+}
+
+.content__input::placeholder{
+  font: bold 15px Times;
 }
 
 .content__themes{
@@ -113,7 +117,14 @@
   }
 
   .content__input{
+    height: 15px;
+    width: 90%;
+    padding: 0 0 1px 4px;
+  }
+  
+  .content__input::placeholder{
     font: bold 12px Times;
+   
   }
 
   .content__themes{
@@ -196,9 +207,14 @@
   }
 
   .content__input{
-    font: bold 10px/13px Times;
-    max-width: 80px;
+    max-width: 73px;
+    height: 10px;
     padding: 2px;
+  }
+
+  .content__input::placeholder{
+    font: bold 10px/13px Times;
+    font-size: none;
   }
 
   .content__theme-link{
