--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -10,6 +10,7 @@
   list-style: none;
   padding-left: 0;
   margin: 0;
+  display: flex;
 }
 
 .navigation__menu {
@@ -23,7 +24,7 @@
 
 .navigation__link {
   text-decoration: none;
-  color: #080402;
+  color: #493C2F;;
 }
 
 @media screen and (max-width: 980px) {
