--- a/src/components/СolumnMain/ColumnMain.css
+++ b/src/components/СolumnMain/ColumnMain.css
@@ -37,7 +37,7 @@
 }
 
 .content__letter-link:hover{
-  border-bottom: 2px solid #493C2F;
+  text-decoration-line: underline;
 }
 
 .content__letter-link:last-child{
