--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   background: url(../../images/dear_dizzy_sepia4.png) bottom right no-repeat;
-  margin: 0 auto;
+  margin: 0;
+  align-self: center;
 }
 
 .footer__copyright{
