--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -10,25 +10,32 @@
 .content__table-header{
   font: bold 17px/21px Times;
   margin: 4px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content__table-name{
   text-align: left;
   position: relative;
-  width: 10%;
+}
+
+.content__table-name:nth-of-type(1){
+  width: 25%;
 }
 
 .content__table-name:nth-of-type(2){
-  width: 3%;
+  width: 17%;
 }
 
 .content__table-name:nth-of-type(3){
   text-align: right;
+  width: 18%;
 }
 
 .content__table-name:nth-of-type(4){
   text-align: right;
-  width: 7%;
+  width: 19%;
 }
 
 .content__dash-long{
@@ -96,6 +103,7 @@
   .content__table-header {
     font: bold 8px/12px Times;
     width: 200px;
+    justify-content: flex-start;
   }
 
   .content__table {
@@ -105,6 +113,7 @@
 
   .content__table-name {
     width: 1%;
+    margin-right: 7px;
   }
 
   .content__table-letter{
@@ -112,8 +121,13 @@
     top: 24px;
   }
 
+  .content__table-name:nth-of-type(2) {
+    margin-right: 17px;
+  }
+
   .content__table-name:nth-of-type(3) {
     text-align: center;
+    margin-right: 15px;
   }
 
   .content__table-name:nth-of-type(4) {
@@ -127,8 +141,9 @@
 
 @media screen and (max-width: 420px) {
   .content__table-header {
-    font: bold 8px/10px Times;
+    font: bold 7px/9px Times;
     width: 165px;
+    margin: 4px 30px 0 55px;
   }
 
   .content__table{
@@ -139,6 +154,23 @@
   .content__table-letter {
     font: bold 18px Times;
     top: 22px;
-}
+  }
+  
+  .content__table-name {
+    margin-right: 3px;
+  }
+
+  .content__table-name:nth-of-type(1) {
+    width: 24%;
+  }
+
+  .content__table-name:nth-of-type(2) {
+    margin-right: 19px;
+  }
+
+  .content__table-name:nth-of-type(3) {
+    margin-right: 6px;
+    text-align: left;
+  }
 }
 
