--- a/src/components/СolumnMain/ColumnMain.css
+++ b/src/components/СolumnMain/ColumnMain.css
@@ -5,7 +5,7 @@
   border-right: 3px;
   border-style: solid;
   border-color: #D6D0AB;
-  padding: 32px;
+  padding: 32px 50px;
   background-color: #F8F4E0;
   display: flex;
   flex-direction: column;
@@ -20,34 +20,10 @@
   margin: 0;
 }
 
-.content__letter-search-list{
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding-left: 10px;
-  margin: 32px 0 0;
-  font: normal 17px/21px Times;
-}
-
-.content__letter-link{
-  text-decoration: none;
-  color:#493C2F;
-  margin-right: 12px;
-}
-
-.content__letter-link:hover{
-  text-decoration-line: underline;
-}
-
-.content__letter-link:last-child{
-  margin-right: 0;
-}
-
 @media screen and (max-width: 980px) {
   .content__column-main {
     max-width: 494px;
-    padding: 15px;
+    padding: 30px;
 }
   .content__title{
     font: bold 18px Georgia;
@@ -70,7 +46,7 @@
 @media screen and (max-width: 580px) {
   .content__column-main {
       max-width: 210px;
-      padding: 10px;
+      padding: 20px;
   }
   .content__letter-search-list{
     font: normal 13px/17px Times;
@@ -80,7 +56,7 @@
 @media screen and (max-width: 420px) {
   .content__column-main {
       max-width: 165px;
-      padding: 10px;
+      padding: 20px;
   }
 
   .content__title{
